<resources>
    <string name="app_name">StudyLink</string>
    <string name="lbl_password">Password</string>
    <string name="hint_email">Masukkan Email</string>
    <string name="hint_password">Masukkan Password</string>
    <string name="bt_btn_login">Login</string>
    <string name="search_hint">Search For...</string>
    <string name="menu_video_call">Video Call</string>
    <string name="menu_voice_call">Voice Call</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_forum">Forum</string>
    <string name="menu_course">Courses</string>
    <string name="menu_exam">Exam</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_assignments">Assignments</string>
    <string name="promo_update_schedule">Update Your Schedule</string>
    <string name="to_get_unlimited">To Get Unlimited</string>
    <string name="default_user_name">Agnes Dwetasari</string>
    <string name="logout_button">Logout</string>
    <string name="profile_picture">Foto profil pengguna</string>
    <string name="lbl_perintahLogin">Silahkan login dahulu untuk melanjutkan</string>
    <string name="lbl_masuk">MASUK</string>
    <string name="hind_username">Masukkan Username</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="lupa_password">Lupa password</string>
    <string name="buat_akun_baru">Buat akun baru Anda</string>
    <string name="Register">DAFTAR</string>
    <string name="hint_username">Buat Username</string>
    <string name="register">Register</string>
    <string name="hint_konfirmasi_password">Konfirmasi Password</string>
    <string name="hint_buat_password">Buat Password</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="home">Home</string>
    <string name="profil">Profil</string>
    <string name="welcome">Welcome</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="beranda">Beranda</string>
    <string name="title_activity_fragment">Fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="anisleogils_gmail_com">anisleogils@gmail.com</string>
    <string name="email">Email</string>
    <string name="dwetasari">Dwetasari</string>
    <string name="last_name">Last Name</string>
    <string name="agnes">Agnes</string>
    <string name="first_name">First Name</string>
    <string name="agnes_dwetasari">Agnes Dwetasari</string>
    <string name="jan_01_2025">JAN 01 2025</string>
    <string name="profile">Profile</string>
    <string name="calender">CALENDER</string>
    <string name="date_picker_button">date_picker_button</string>
    <string name="back_button">back_button</string>
    <string name="daftar_ujian">Daftar Ujian</string>
    <string name="ujian_matematika">Ujian Matematika</string>
    <string name="tulis_komentar">Tulis komentar...</string>
    <string name="belajar_integral_turunan_dan_aljabar">Belajar integral, turunan, dan aljabar</string>
    <string name="programming">Programming</string>
    <string name="ui_ux_design">UI / UX Design</string>
    <string name="desain_aplikasi_modern_dan_user_friendly">Desain aplikasi modern dan user friendly</string>
    <string name="dasar_java_dan_android_development">Dasar Java dan Android Development</string>
    <string name="prev_button">&lt;</string>
    <string name="next_button">&gt;</string>
    <string name="february_2025">February 2025</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="assignments">Assignments</string>
    <string name="exam">Exam</string>
    <string name="schedule">Schedule</string>
    <string name="nama_mata_kuliah">Nama Mata Kuliah</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="waktu">Waktu</string>
    <string name="daftar_mata_kuliah">Daftar Mata Kuliah</string>
    <string name="tambah_course">Tambah Course</string>
    <string name="edit_foto_profil">Edit Foto Profil</string>
</resources>