<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"
        android:layout_weight="1.5" >
            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/logo" />
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_perintahLogin"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/bg_gradasi"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_masuk"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            android:autofillHints="username"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/form"
            android:drawableStart="@drawable/user"
            android:hint="@string/hind_username"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/et_pass"
            android:autofillHints="password"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/form"
            android:drawableStart="@drawable/key"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:layout_marginTop="12dp" />

        <TextView
            android:textColor="#ffff"
            android:text="@string/lupa_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_tombol"
            android:text="@string/bt_btn_login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <TextView
            android:textColor="#ffffff"
            android:text="@string/belum_punya_akun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/tv_daftar"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="@string/Register"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>